# sovereign-agents

./: MANIFEST.in  README.md  install.sh  pyproject.toml
sovereign/: __init__.py  __main__.py  cli.py  registry.py
tests/: test_registry.py
