[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-agents"
version = "0.1.0"
description = "Local-first managed agent platform with thermomorphic memory"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
    "asyncpg>=0.29",
]

# Optional: install these if you want the full Cortex server
[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiortc>=1.9",
    "numpy>=1.26",
]

[project.scripts]
# Entry point is main() in cli.py — argparse-based, no typer dependency
sovereign = "sovereign.cli:main"

[project.urls]
Homepage = "https://github.com/NovasPlace/sovereign-agents"
Repository = "https://github.com/NovasPlace/sovereign-agents"

[tool.setuptools.packages.find]
# Only sovereign* exists in this repo — cortex/ lives in living-mind-cortex
where = ["."]
include = ["sovereign*"]

[tool.setuptools.package-data]
# Ship the bundled example agents with the package
# schema.sql lives in living-mind-cortex, not here
"sovereign_agents" = ["../agents/*.agent.yaml"]
sovereign = ["py.typed"]

# Tell setuptools to also include the agents/ dir as data
[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
